[package]
name = "rpgen"
version = "0.1.1"
authors = ["Racci <racci@racci.dev>"]
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["generator", "password"]
description = "A password generator written in Rust"

[features]
default = ["ui-cli"]

ui-cli = ["lib/ui-cli"]

[dependencies]
lib = { path = "../lib" }
macros = { path = "../macros" }

# Runtimes
tokio = { workspace = true }
#tokio-stream = { workspace = true }

# Cli & UI
clap = { workspace = true }
#clap_complete = { workspace = true }

# Data
rand = { workspace = true, small_rng = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
#thiserror = { workspace = true }
anyhow = { workspace = true }

derivative = { version = "2.2.0", features = [] }

[dev-dependencies]
# Logging & Errors
env_logger = "*"
test-log = { version = "0.2.12", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

regex = "1.9.5"
