[package]
name = "popup"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib" }
clap = { version = "4.2.*", features = ["derive", "std"], default-features = false }
tokio = { version = "1.28.*", default-features = false, features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4.*", default-features = false }

# Logging & Errors
tracing = "0.1.*"
thiserror = "1.0.*"
anyhow = "1.0.*"

iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [] }
iced_runtime = { git = "https://github.com/iced-rs/iced.git", branch = "master", package = "iced_runtime" }
iced_aw = { version = "^0.5.2", default-features = false, features = ["modal","card"] }

#native-windows-gui = { version = "1.0.13", features = ["all"] }
#native-windows-derive = "1.0.3"

[target.'cfg(windows)'.dependencies]
#windows = { version = "0.48", features = [ "Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging" ]}
registry = "1.2.3"
winrt-notification = "0.5.1"

[dev-dependencies]
fake = { version = "2.6", features=["derive", "chrono", "maybe-non-empty-collections"]}
rand = "0.8"
