[package]
name = "popup"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib" }

# Runtimes
tokio = { workspace = true }

# Cli & UI
clap = { workspace = true }

# Data & Serialization
chrono = { workspace = true, default-features = false }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# GUI
iced = { workspace = true, optional = true }
iced_aw = { workspace = true, optional = true }

#native-windows-gui = { version = "1.0.13", features = ["all"] }
#native-windows-derive = "1.0.3"

[target.'cfg(windows)'.dependencies]
#windows = { version = "0.48", features = [ "Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging" ]}
registry = "1.2.3"
winrt-notification = "0.5.1"

[dev-dependencies]
fake = { version = "2.6", features=["derive", "chrono", "maybe-non-empty-collections"]}
rand = "0.8"
