[package]
name = "popup"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

[features]
default = ["ui-gui"]

ui-gui = ["iced", "iced_aw", "iced_runtime"]

[dependencies]
lib.workspace = true

# Runtimes
tokio = { workspace = true }

# Cli & UI
#clap = { workspace = true }

# Data & Serialization
#chrono = { workspace = true, default-features = false }

# Logging & Errors
tracing.workspace = true
#tracing-subscriber.workspace = true
#thiserror.workspace = true
anyhow.workspace = true

# GUI
iced = { workspace = true, optional = true }
iced_aw = { workspace = true, optional = true }
iced_runtime = { workspace = true, optional = true }

#native-windows-gui = { version = "1.0.13", features = ["all"] }
#native-windows-derive = "1.0.3"

[target.'cfg(windows)'.dependencies]
#windows = { version = "0.48", features = [ "Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging" ]}
#registry = "1.2.3"
winrt-notification = "0.5.1"
