[package]
name = "rebooter"
version = "0.0.1"
edition = "2021"

[lib]
name = "rebooter"
path = "src/lib.rs"

[[bin]]
name = "rebooter"
path = "src/main.rs"

[features]
default = ["ui-cli"]

ui-cli = ["lib/ui-cli"]
ui-repl = ["lib/ui-repl"]

[dependencies]
lib = { path = "../lib" }
macros = { path = "../macros" }

# Runtimes
tokio = { workspace = true }

# Cli & UI
clap = { workspace = true }

# Data & Serialization
chrono = { workspace = true, default-features = false }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

uptime_lib = "0.2.2"
sysexits = "0.7.1"
planif = "0.2"

[target.'cfg(windows)'.dependencies]
planif = "0.2"
registry = "1.2.3"

[dev-dependencies]
fake = { version = "2.6", features = ["derive", "chrono", "maybe-non-empty-collections"] }
rand = "0.8"
