[package]
name = "rebooter"
version = "0.1.0"
edition = "2021"

[lib]
name = "rebooter"
path = "src/lib.rs"

[[bin]]
name = "rebooter"
path = "src/main.rs"

[features]
default = ["ui-cli"]

ui-cli = ["lib/ui-cli"]

[dependencies]
lib = { path = "../lib" }
macros = { path = "../macros" }

# Runtimes
tokio = { workspace = true }

# Cli & UI
clap = { workspace = true }

# Data & Serialization
chrono = { workspace = true, default-features = false }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

uptime_lib = "0.3.0"
sysexits = { workspace = true }
planif = "1.0.0"
notify-rust = "4.10.0"

[target.'cfg(windows)'.dependencies]
planif = "1.0.0"
registry = "1.2.3"

[dev-dependencies]
fake = { version = "2.6", features = ["derive", "chrono", "maybe-non-empty-collections"] }
rand = { workspace = true }
