[package]
name = "rebooter"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

[lib]
name = "rebooter"
path = "src/lib.rs"

[[bin]]
name = "rebooter"
path = "src/main.rs"
required-features = ["ui-cli"]

[features]
default = ["ui-cli"]

ui-cli = ["amt-lib/ui-cli"]

[dependencies]
amt-lib.workspace = true
amt-macros.workspace = true

# Runtimes
tokio.workspace = true

# Cli & UI
clap.workspace = true

# Data & Serialization
chrono.workspace = true

# Logging & Errors
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true

uptime_lib.workspace = true
sysexits.workspace = true
notify-rust.workspace = true

[target.'cfg(windows)'.dependencies]
planif.workspace = true
registry.workspace = true

[dev-dependencies]
rand.workspace = true
fake = { workspace = true, features = ["derive", "chrono", "maybe-non-empty-collections"] }
