[package]
name = "rest"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib" }

# Runtimes
tokio = { workspace = true }

# Cli & UI
clap = { workspace = true }

# Data & Serialization
serde = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
quick-xml = { version = "0.30.0", features = ["serde", "serialize"] }

# Networking
reqwest = { workspace = true, features = ["json", "gzip"] }
reqwest-middleware = "0.2.2"
http-cache-reqwest = { version = "0.9.0", features = ["manager-moka"] }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

async-trait = "0.1.68"
async-lazy = "0.1.0"
cached = "0.43.0"
michie = { version = "3.0.2" }
skim = "0.10.4"
regex = "1.8.1"
fuzzy-matcher = "0.3.7"
