[package]
name = "sys-cleaner"
version = "0.3.0"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cleaner", "clean", "cleaning", "cleaning-tool", "cleaning-utility"]
description = "A System cleaner written in Rust"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

[[bin]]
name = "sys-cleaner"
path = "src/main.rs"
required-features = ["ui-cli"]

[features]
default = ["ui-cli"]

ui-cli = ["amt-lib/ui-cli"]

[dependencies]
amt-lib.workspace = true
amt-macros.workspace = true
impls = "1.0.3"

# Runtimes
tokio.workspace = true

# Cli & UI
clap.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
inquire.workspace = true

# Futures & Async
async-trait.workspace = true
tokio-stream.workspace = true
rayon.workspace = true

cfg-if.workspace = true
paste.workspace = true
chrono.workspace = true
glob.workspace = true
michie = "3.0.2"
lazy_static = "1.4.0"
downcast-rs = "1.2.0"

# Logging & Errors
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[target.'cfg(unix)'.dependencies]
permissions = "0.5.1"

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
assert_fs.workspace = true
